fix: point to right branch

--- a/apps/base/flux-go-test/repository.yaml
+++ b/apps/base/flux-go-test/repository.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 1m
   url: https://github.com/jmpargana/flux-go-test
   ref:
-    branch: master
+    branch: main
   ignore: |
     # exclude all
     /*
