--- a/apps/base/flux-go-test/release.yaml
+++ b/apps/base/flux-go-test/release.yaml
@@ -2,16 +2,11 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: flux-go-test
-  namespace: flux-go-test
 spec:
-  releaseName: flux-go-test
-  chart:
-    spec:
-      chart: flux-go-test
-      sourceRef:
-        kind: GitRepository
-        name: flux-go-test
-  interval: 50m
-  install:
-    remediation:
-      retries: 3
+  chartRef:
+    kind: OCIRepository
+    name: flux-go-test
+    namespace: flux-system
+  interval: 10m
+  values:
+    replicaCount: 2
