refactor: try HelmRepository

--- a/apps/base/flux-go-test/release.yaml
+++ b/apps/base/flux-go-test/release.yaml
@@ -9,7 +9,7 @@ spec:
     spec:
       chart: flux-go-test
       sourceRef:
-        kind: GitRepository
+        kind: HelmRepository
         name: flux-go-test
   interval: 50m
   install:
