--- a/apps/base/flux-go-test/repository.yaml
+++ b/apps/base/flux-go-test/repository.yaml
@@ -1,16 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
+kind: HelmRepository
 metadata:
-  name: flux-go-test
-  namespace: flux-go-test
+  name: podinfo
+  namespace: default
 spec:
   interval: 1m
-  url: https://github.com/jmpargana/flux-go-test
-  chart: charts
-  ref:
-    branch: main
-  ignore: |
-    # exclude all
-    /*
-    # include charts directory
-    !/charts/    
+  url: https://jmpargana.github.io/flux-go-test
