--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
   - cert-manager.yaml
   - ingress-nginx.yaml
-  - open-telemetry.yaml
+  - opentelemetry-collector.yaml
+  - opentelemetry-operator.yaml
