--- a/infrastructure/controllers/grafana.yaml
+++ b/infrastructure/controllers/grafana.yaml
@@ -2,32 +2,32 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: otel
+  name: grafana
   labels:
     toolkit.fluxcd.io/tenant: sre-team
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: otel
-  namespace: otel
+  name: grafana
+  namespace: grafana
 spec:
   interval: 24h
-  url: https://open-telemetry.github.io/opentelemetry-helm-charts
+  url: https://grafana.github.io/helm-charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: opentelemetry-collector
-  namespace: otel
+  name: grafana-ui
+  namespace: grafana
 spec:
   interval: 30m
   chart:
     spec:
-      chart: opentelemetry-collector
+      chart: grafana
       version: "*"
       sourceRef:
         kind: HelmRepository
-        name: otel
-        namespace: otel
+        name: grafana
+        namespace: grafana
       interval: 12h
