--- a/clusters/test/infrastructure.yaml
+++ b/clusters/test/infrastructure.yaml
@@ -1,3 +1,11 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  labels:
+    toolkit.fluxcd.io/tenant: sre-team
+  name: infrastructure
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
