--- a/clusters/test/infrastructure.yaml
+++ b/clusters/test/infrastructure.yaml
@@ -1,22 +1,14 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    toolkit.fluxcd.io/tenant: sre-team
-  name: infrastructure
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: infrastructure
-  namespace: infrastructure
+  namespace: flux-system
 spec:
   interval: 10m0s
   sourceRef:
     kind: GitRepository
-    name: infrastructure
-  path: ../infrastructure/controllers
+    name: flux-system
+  path: ./infrastructure/controllers
   prune: true
   wait: true
   timeout: 5m0s
