fix: remove telemetry operator for a while

--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
   - cert-manager.yaml
   - nginx-ingress.yaml
   - opentelemetry-collector.yaml
-  - opentelemetry-operator.yaml
+  # - opentelemetry-operator.yaml
   - grafana.yaml
