--- a/apps/base/flux-go-test/release.yaml
+++ b/apps/base/flux-go-test/release.yaml
@@ -15,3 +15,11 @@ spec:
   install:
     remediation:
       retries: 3
+  values:
+    nodeSelector:
+      kubernetes.io/arch: amd64
+    image:
+      pullPolicy: Always
+    env:
+      - name: OTEL_EXPORTER_OTLP_ENDPOINT
+        value: "http://opentelemetry-collector.otel.svc.cluster.local:4317"
