fix: add matching arch
output of commands:
- kubectl get nodes -o wide
- kubectl get nodes -o json | jq
'.items[].metadata.labels["kubernetes.io/arch"]'

--- a/apps/base/flux-go-test/release.yaml
+++ b/apps/base/flux-go-test/release.yaml
@@ -17,7 +17,7 @@ spec:
       retries: 3
   values:
     nodeSelector:
-      kubernetes.io/arch: amd64
+      kubernetes.io/arch: arm64
     image:
       pullPolicy: Always
     env:
