--- a/apps/base/flux-go-test/release.yaml
+++ b/apps/base/flux-go-test/release.yaml
@@ -22,4 +22,10 @@ spec:
       pullPolicy: Always
     env:
       - name: OTEL_EXPORTER_OTLP_ENDPOINT
-        value: "http://opentelemetry-collector.otel.svc.cluster.local:4317"
+        value: "http://opentelemetry-collector.otel.svc.cluster.local:4318"
+      - name: OTEL_EXPORTER_METRICS_ENDPOINT
+        value: "http://opentelemetry-collector.otel.svc.cluster.local:4318"
+      - name: OTEL_EXPORTER_TRACES_ENDPOINT
+        value: "http://opentelemetry-collector.otel.svc.cluster.local:4318"
+      - name: OTEL_EXPORTER_LOGS_ENDPOINT
+        value: "http://opentelemetry-collector.otel.svc.cluster.local:4318"
