fix: set missing otel collector values

--- a/infrastructure/controllers/opentelemetry-collector.yaml
+++ b/infrastructure/controllers/opentelemetry-collector.yaml
@@ -31,3 +31,7 @@ spec:
         name: otel
         namespace: otel
       interval: 12h
+  values:
+    image:
+      repository: otel/opentelemetry-collector-k8s
+    mode: deployment
