feat: add kustomizations

--- a/infrastructure/controllers/kustomization.yaml
+++ b/infrastructure/controllers/kustomization.yaml
@@ -6,3 +6,6 @@ resources:
   - opentelemetry-collector.yaml
   # - opentelemetry-operator.yaml
   - grafana.yaml
+  - mimir.yaml
+  - tempo.yaml
+  - loki.yaml
