feat: add values to loki and tempo

--- a/infrastructure/controllers/loki.yaml
+++ b/infrastructure/controllers/loki.yaml
@@ -12,4 +12,7 @@ spec:
         kind: HelmRepository
         name: grafana
         namespace: grafana
-      interval: 12h
+      interval: 12h  
+  values:
+    loki:
+      auth_enabled: false
