fix: add missing storage config in loki

--- a/infrastructure/controllers/loki.yaml
+++ b/infrastructure/controllers/loki.yaml
@@ -16,3 +16,9 @@ spec:
   values:
     loki:
       auth_enabled: false
+
+      storage:
+        type: filesystem
+
+      commonConfig:
+        path_prefix: /var/loki
