--- a/infrastructure/controllers/opentelemetry-collector.yaml
+++ b/infrastructure/controllers/opentelemetry-collector.yaml
@@ -33,7 +33,7 @@ spec:
       interval: 12h
   values:
     image:
-      repository: otel/opentelemetry-collector-k8s
+      repository: grafana/otel-collector
     mode: deployment
     config:
       receivers:
@@ -44,7 +44,7 @@ spec:
 
       exporters:
         loki:
-          endpoint: http://loki.grafana.svc.cluster.local/loki/api/v1/push
+          endpoint: http://loki-gateway.grafana.svc.cluster.local/loki/api/v1/push
         otlp/tempo:
           endpoint: tempo.grafana.svc.cluster.local:4317
           tls:
