fix: reset otel image

--- a/infrastructure/controllers/opentelemetry-collector.yaml
+++ b/infrastructure/controllers/opentelemetry-collector.yaml
@@ -33,7 +33,7 @@ spec:
       interval: 12h
   values:
     image:
-      repository: grafana/otel-collector
+      repository: otel/opentelemetry-collector-k8s
     mode: deployment
     config:
       receivers:
