fix: add missing loki pipeline

--- a/infrastructure/controllers/opentelemetry-collector.yaml
+++ b/infrastructure/controllers/opentelemetry-collector.yaml
@@ -57,10 +57,10 @@ spec:
 
       service:
         pipelines:
-          # logs:
-          #   receivers: [otlp]
-          #   processors: [batch]
-          #   exporters: [loki]
+          logs:
+            receivers: [otlp]
+            processors: [batch]
+            exporters: [loki]
           traces:
             receivers: [otlp]
             processors: [batch]
