--- a/infrastructure/controllers/loki.yaml
+++ b/infrastructure/controllers/loki.yaml
@@ -19,6 +19,7 @@ spec:
       persistence:
         enabled: false
     loki:
+      auth_enabled: false
       commonConfig:
         replication_factor: 1
       schemaConfig:
