fix: disable loki pcache

--- a/infrastructure/controllers/loki.yaml
+++ b/infrastructure/controllers/loki.yaml
@@ -15,7 +15,7 @@ spec:
       interval: 12h  
   values:
     resultsCache:
-      # enabled: false
+      enabled: false
       persistence:
         enabled: false
     loki:
